<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dadosacesso"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/verificarinfo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/background_light"
        android:textColorHint="#CCCCCC"
        app:helperTextEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/email"
            android:textColor="#CCCCCC"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textColorLink="@android:color/background_dark"
            android:textCursorDrawable="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtEsquecerSenha"
        android:layout_width="181dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu"
        android:onClick="abrirRecuperar"
        android:text="@string/esqueceu"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/lembrar"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEsquecerSenha">

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_redonda_vermelho"
            android:fontFamily="@font/ubuntu"
            android:text="@string/btnEntrar"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_redonda_azul"
            android:fontFamily="@font/ubuntu"
            android:onClick="fechar"
            android:text="@string/btnSair"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="249dp"
        android:layout_height="147dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heartbeat" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:fontFamily="@font/supermercado_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_senha_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

</android.support.constraint.ConstraintLayout>