<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="249dp"
        android:layout_height="147dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heartbeat" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:fontFamily="@font/supermercado_one"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:fontFamily="@font/supermercado_one"
        app:layout_constraintEnd_toEndOf="@+id/imgLogo"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputEmailRecuperar"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtEmailRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_24dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/borda_redonda_vermelho"
        android:fontFamily="@font/ubuntu"
        android:text="@string/btnEnviar"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailRecuperar" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/descricao"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</android.support.constraint.ConstraintLayout>